# agent-theme

./: .gitignore  AGENTS.md  LICENSE  MIGRATION.md  README.en.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
agent/: issues.md  operations.md  project-rules.md
src/: App.svelte  app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agent.rs  cdp.rs  config.rs  lib.rs  theme.rs
src/lib/: actions.ts  polling.ts  stores.ts  tauri-commands.ts  types.ts
src/lib/components/: AgentSelector.svelte  DropZone.svelte  ImageCropper.svelte  StatusBar.svelte  StatusDot.svelte  ThemeCard.svelte  ThemeGrid.svelte  Toggle.svelte  UploadCard.svelte  UploadModal.svelte
themes/azurlane/: theme.json
themes/carton/: theme.json
themes/changli/: theme.json
themes/nailin/: theme.json
themes/zani/: theme.json
web/: app.js  index.html  package-lock.json  package.json  style.css
