[package]
name = "agent-theme-companion"
version = "0.1.0"
description = "Independent theme companion for Agent Desktop"
authors = ["Cmochance"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
sysinfo = "0.36.1"
reqwest = { version = "0.13.3", features = ["json"] }
tokio-tungstenite = "0.29.0"
tokio = { version = "1.52.3", features = ["full"] }
futures-util = "0.3.32"
dirs = "6.0.0"
lazy_static = "1.5.0"
base64 = "0.22.1"
tauri-plugin-single-instance = "2.4.2"
